# StructTokenBench

./: LICENSE  README.md  pyproject.toml  setup.py
src/: data_module.py  model_module.py  modeling_util.py  vqvae_model.py
src/dataset/: base.py  conformational_switch.py  tape_remote_homology.py
src/vqvae/: blocks.py  quantizer_module.py  transformer_stack.py
structtokenbench/: __init__.py  data_module.py  inference.py  model_module.py  modeling_util.py  tokenizer.py  vqvae_model.py
structtokenbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
structtokenbench/dataset/: __init__.py  atlas.py  base.py  biolip2.py  cameo.py  casp14.py  conformational_switch.py  interpro.py  pretrain_pdb.py  proteinglue_epitope_region.py  proteinshake_binding_site.py  tape_remote_homology.py
structtokenbench/script/: run_pretraining_vqvae.py  run_supervised_task.py
structtokenbench/vqvae/: __init__.py  blocks.py  transformer_stack.py
