[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structtokenbench"
version = "0.1.0"
authors = [
    {name = "StructTokenBench Team"},
]
description = "StructTokenBench: A structure tokenization framework for protein analysis"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
    "numpy",
    "lmdb",
    "packaging",
    "hydra-core",
    "lightning",
    "transformers",
    "deepspeed",
    "tensorboard",
    "ipdb",
    "esm",
    "cloudpathlib",
    "pipreqs",
    "lxml",
    "proteinshake",
    "tmtools",
    "tape_proteins",
    "torch-scatter",
    "accelerate",
    "torch_geometric",
    "line_profiler",
    "mini3di",
    "dm-tree",
    "colorcet",
    "ogb==1.2.1",
    "sympy",
    "ase",
    "torch-cluster",
    "jax==0.4.25",
    "tensorflow",
    "biopython",
    "seaborn",
    "omegaconf",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.scripts]
structtokenbench-inference = "structtokenbench.inference:main"

[project.urls]
Homepage = "https://github.com/KatarinaYuan/StructTokenBench.git"
Repository = "https://github.com/KatarinaYuan/StructTokenBench.git"
[tool.setuptools.packages.find]
where = ["."]
include = ["structtokenbench*", "src*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true